--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "app-starter-project-with-webpack",
+  "name": "stories-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Progressive Web App for sharing stories",
+  "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "start-dev": "webpack serve --config webpack.dev.js",
-    "serve": "http-server dist"
+    "build:dev": "webpack --config webpack.dev.js",
+    "serve": "webpack serve --config webpack.dev.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "YOUR_NAME <yourmail@mail.com>",
-  "license": "ISC",
+  "keywords": [
+    "pwa",
+    "progressive-web-app",
+    "stories",
+    "dicoding",
+    "javascript"
+  ],
+  "author": "Abid Abdillah Cohord",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "babel-loader": "^10.0.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^13.0.0",
-    "css-loader": "^6.8.1",
-    "html-webpack-plugin": "^5.6.3",
-    "http-server": "^14.1.1",
-    "mini-css-extract-plugin": "^2.9.2",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "webpack-merge": "^6.0.1",
-    "workbox-webpack-plugin": "^7.3.0"
+    "@babel/core": "^7.22.0",
+    "@babel/preset-env": "^7.22.0",
+    "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "^5.9.0"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
